--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>romany.life</title>
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  background: black;
-  height:  100%;
-  overflow: hidden;
-}
-iframe {
-  width: 100%;
-  height: 100%;
-}
-</style>
+  <title>Romany Life</title>
+  <meta property="og:image" content="https://romany.life/banner.jpeg" />
 <body>
 <iframe src="https://www.youtube.com/embed/videoseries?list=PLFh3NgpDbzN79cNEDe2jLfcW_Or5cLfyG" frameborder="0" allowfullscreen></iframe>
 </body>
