--- a/index.html
+++ b/index.html
@@ -2,7 +2,40 @@
 <html>
   <title>Romany Life</title>
   <meta property="og:image" content="https://romany.life/banner.jpeg" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      height:  100%;
+      overflow: hidden;
+      font-family: Robote, Tahoma, Arial, sans-serif;
+      font-size: 5vh;
+      color: white;
+    }
+    iframe {
+      width: 100%;
+      height: 90%;
+    }
+    .title {
+      height: 10%;
+      overflow:  hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .caps {
+      font-variant: small-caps;
+    }
+    .title a {
+      color: white;
+    }
+  </style>
 <body>
+<div class="title">
+  <a href="https://socialdance.stanford.edu/Syllabi/Romany_Polka.pdf" class="caps">Romany&nbsp;Polka</a>
+</div>
 <iframe src="https://www.youtube.com/embed/videoseries?list=PLFh3NgpDbzN79cNEDe2jLfcW_Or5cLfyG" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
