--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html>
   <title>Romany Life</title>
   <meta property="og:image" content="https://romany.life/banner.jpeg" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      height: 100%;
+      overflow: hidden;
+      font-family: Roboto, Tahoma, Arial, sans-serif;
+      font-size: 5vh;
+      color: white;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 <body>
 <iframe src="https://www.youtube.com/embed/videoseries?list=PLFh3NgpDbzN79cNEDe2jLfcW_Or5cLfyG" frameborder="0" allowfullscreen></iframe>
 </body>
